feat(back): #835 cfn cloudfront georestrictions
Former-commit-id: 8424abef8858ebb924474948717f74b43aba917e

--- a/test/static/cloudformation/vulnerable/template.yaml
+++ b/test/static/cloudformation/vulnerable/template.yaml
@@ -38,6 +38,11 @@ Resources:
                 - SSLv3
             DomainName: domain-name
             Id: id
+        Restrictions:
+          GeoRestriction:
+            Locations:
+              - Colombia
+            RestrictionType: none
         ViewerCertificate:
           MinimumProtocolVersion: TLSv1.1_2016
     Type: AWS::CloudFront::Distribution
