feat(back): #936.36 add module rds
- add func has_unencrypted_storage
- add test


Former-commit-id: eb546c6d816fde5b51fb3af94642cbe02b48da5c

--- a/test/static/cloudformation/code_as_data_vulnerable/template.yaml
+++ b/test/static/cloudformation/code_as_data_vulnerable/template.yaml
@@ -18,6 +18,21 @@ Parameters:
     Default: terminate
     Type: String
 Resources:
+  cluster1:
+    Properties:
+      BackupRetentionPeriod: 0
+      DeletionProtection: 'true'
+      Engine: postgres
+      StorageEncrypted: 'false'
+    Type: AWS::RDS::DBCluster
+  cluster2:
+    Properties:
+      BackupRetentionPeriod: 0
+      DeletionProtection: 'true'
+      Engine: postgres
+      StorageEncrypted:
+        Ref: DisableFeature
+    Type: AWS::RDS::DBCluster
   ec2instance1:
     Properties:
       DisableApiTermination: 'false'
