feat(back): #936.37 has_not_automated_backups
Former-commit-id: ae0ce7ad50cbed9f6afbf237e937f21cf7057448

--- a/test/static/cloudformation/code_as_data_vulnerable/template.yaml
+++ b/test/static/cloudformation/code_as_data_vulnerable/template.yaml
@@ -1,5 +1,8 @@
 Description: code_as_data_vulnerable
 Parameters:
+  BackupPeriod:
+    Default: 0
+    Type: Integer
   DisableFeature:
     Default: false
     Type: String
@@ -20,7 +23,8 @@ Parameters:
 Resources:
   cluster1:
     Properties:
-      BackupRetentionPeriod: 0
+      BackupRetentionPeriod:
+        Ref: BackupPeriod
       DeletionProtection: 'true'
       Engine: postgres
       StorageEncrypted: 'false'
