--- a/test/static/cloudformation/vulnerable/template.yaml
+++ b/test/static/cloudformation/vulnerable/template.yaml
@@ -1,5 +1,14 @@
 Description: vulnerable
 Resources:
+  Elb2Listener:
+    Properties:
+      Certificates: []
+      DefaultActions: []
+      LoadBalancerArn: loadbal
+      Port: 443
+      Protocol: HTTPS
+      SslPolicy: ELBSecurityPolicy-TLS-1-0-2015-04
+    Type: AWS::ElasticLoadBalancingV2::Listener
   TargetGroup1:
     Properties:
       HealthCheckEnabled: 'false'
