feat(back): #835 cfn iam ssm access
Former-commit-id: af0a7209ab214bab4ef3a17254e1a9db5eba7c1f

--- a/test/static/cloudformation/vulnerable/template.yaml
+++ b/test/static/cloudformation/vulnerable/template.yaml
@@ -236,6 +236,7 @@ Resources:
             Statement:
               - Action:
                   - ecr:*
+                  - ssm:*
                 Effect: Allow
                 Resource:
                   - '*'
