--- a/test/static/cloudformation/vulnerable/template.yaml
+++ b/test/static/cloudformation/vulnerable/template.yaml
@@ -146,7 +146,16 @@ Resources:
   key1:
     Properties:
       EnableKeyRotation: 'false'
-      KeyPolicy: {}
+      KeyPolicy:
+        Id: key-default-1
+        Statement:
+          - Action: kms:*
+            Effect: Allow
+            Principal:
+              AWS: '*'
+            Resource: '*'
+            Sid: Enable IAM User Permissions
+        Version: '2012-10-17'
     Type: AWS::KMS::Key
   launchTemplate:
     Properties:
