feat(cross): #2140.19 serve graphic as iframe
- now graphics can exploit the full potential of D3
  because they have a dedicated DOM to mess with !
- Also the django view acts as static generator out-of-the-box
  (it renders plain html)
- Pending to upload the generator, in the ephemeral
  this renders an error frame
- ![demo](/uploads/55ac44f8d57a24b6d56a4a62e7403fc7/demo.gif)


Former-commit-id: 6f0615b358f36f09d79c3af375e7828254cbe7ee

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ shared-local-instance.db
 .bundle
 Gemfile.lock
 vendor
+app/assets/admin/
 app/assets/node_modules
 app/assets/package-lock.json
 deploy/.terraform
