feat(back): #941.33 cfn ssl transport
Former-commit-id: 807710992e04df37d51aa77e20ac3fb0339f2fa2

--- a/test/static/cloudformation/vulnerable/template.yaml
+++ b/test/static/cloudformation/vulnerable/template.yaml
@@ -272,6 +272,9 @@ Resources:
       PolicyDocument:
         Statement:
           - Action: '*'
+            Condition:
+              Bool:
+                aws:SecureTransport: 'false'
             Effect: Allow
             Principal: '*'
           - Action: '*'
