feat(back): #941.34 cfn serverside encryption
Former-commit-id: 614de35a20d3310b746e117674b28eb801d57d94

--- a/test/static/cloudformation/vulnerable/template.yaml
+++ b/test/static/cloudformation/vulnerable/template.yaml
@@ -275,6 +275,8 @@ Resources:
             Condition:
               Bool:
                 aws:SecureTransport: 'false'
+              'Null':
+                s3:x-amz-server-side-encryption: 'false'
             Effect: Allow
             Principal: '*'
           - Action: '*'
