--- a/test/static/cloudformation/vulnerable/template.yaml
+++ b/test/static/cloudformation/vulnerable/template.yaml
@@ -352,6 +352,12 @@ Resources:
           - GroupId
       ToPort: 65535
     Type: AWS::EC2::SecurityGroupIngress
+  trail1:
+    Properties:
+      IsLogging: 'true'
+      IsMultiRegionTrail: 'false'
+      S3BucketName: bucketsito
+    Type: AWS::CloudTrail::Trail
   user1:
     Properties:
       Policies:
