forces\feat(job): #2261.7 add basic report
- the report is based on an asynchronous generator that returns
  all the vulnerabilities of a group

- add get_finding query


Former-commit-id: a3fab1ac5aad1558b28f2af8792c19f76a087fe8

--- a/forces/pyproject.toml
+++ b/forces/pyproject.toml
@@ -13,6 +13,7 @@ version = "0.1.0"
 [tool.poetry.dependencies]
 aiohttp = "3.6.2"
 gql = "3.0.0a1"
+oyaml = "0.9"
 python-jose = "3.1.0"
 python = "^3.8"
 
