skims\feat(back): #2294.162 more cves
- debug, timestamp and websockets-extensions, serialize-javascript
- Just this six packages are almost 50% of the vulnerabilities
  out there


Former-commit-id: 63fd3d3a90de028af246fdbb92a86829b743c32c

--- a/skims/test/data/config/big.yaml
+++ b/skims/test/data/config/big.yaml
@@ -1,12 +1,11 @@
 chdir: ../../
 console_snippets: false
-group: worcester
+group: unittesting
 language: EN
 path:
   include:
     - product/
   exclude:
-    - product/skims/test/
     - glob(**/.git/)
     - glob(**/.venv/)
     - glob(**/node_modules/)
