integrates\feat(back): #2437.1 verify vulnerabilities
- verify vulnerabilities with requested reattack closed
manually (using the yaml)


Former-commit-id: 0231ba8d45858a438a30bfc82b714c71cddb993d

--- a/integrates/test_async/mock/test-vulns.yaml
+++ b/integrates/test_async/mock/test-vulns.yaml
@@ -2,3 +2,10 @@ inputs:
 - field: phone
   state: open
   url: https://example.com
+lines:
+- line: '123'
+  path: path/to/file1.ext
+  state: closed
+- line: '345'
+  path: path/to/file3.ext
+  state: closed
