--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -47,6 +47,7 @@ bugsnag = "3.8.0"
 click = "7.1.2"
 confuse = "1.3.0"
 frozendict = "1.2"
+jmespath = "0.10.0"
 lark-parser = "0.9.0"
 more-itertools = "8.4.0"
 pillow = "7.2.0"
