--- a/melts/MANIFEST.in
+++ b/melts/MANIFEST.in
@@ -3,3 +3,4 @@ include toolbox/rules.def
 include toolbox/sorts/extensions.lst
 include toolbox/sorts/composites.lst
 include toolbox/sorts/model_parameters.json
+include toolbox/sorts/neural_network.joblib
