skims\fix(back): #3499.1 localhost cache and secret data
- Force the F009 check to have a value to consider it vulnerability
- Force the F022 to perform a cache miss
- Added regression tests

Closes #3499


Former-commit-id: e8ad098f6f1267abafaba67c4a2c47b483e13930

--- a/skims/test/data/lib_path/f009/java.properties
+++ b/skims/test/data/lib_path/f009/java.properties
@@ -9,3 +9,5 @@ sonar.password = 123
 sonar.password = ENC(something-base64-encoded-but-encrypted)
 sonar.password = ${env_var}
 sonar.password = #{unknown_tool_trick}#
+
+artifactory_password=
