--- a/skims/test/data/lib_path/f022/java.properties
+++ b/skims/test/data/lib_path/f022/java.properties
@@ -16,3 +16,4 @@ bg.ws.endpoint = ENC(http://www.test.com)
 bg.ws.endpoint = http://localhost
 bg.ws.endpoint = ftp://127.0.0.1
 bg.ws.endpoint = http://0.0.0.0
+sonar.host.url=http://localhost:9000
